--- a/client/src/Component/Card/projectcard.css
+++ b/client/src/Component/Card/projectcard.css
@@ -2,8 +2,22 @@
     background:linear-gradient(
         to right,
         #00A5B0 0%,
-        #00A5B0 15%,
-        #000000 50%,
+        #00A5B0 25%,
+        #000000 25%,
         #000000 100%
     )
+}
+li{
+    color: #00A5B0;
+}
+.borderGrad{
+    background:linear-gradient(
+        to right,
+        #000000 0%,
+        #00A5B0 25%,
+        #ffffff 50%,
+        #ffffff 50%,
+        #00A5B0 75%,
+        #000000 100%
+    );
 }
