Feat:Add About page

--- a/client/src/Component/Card/projectcard.css
+++ b/client/src/Component/Card/projectcard.css
@@ -21,3 +21,14 @@ li{
         #000000 100%
     );
 }
+.bgAbout{
+    background:linear-gradient(
+        to bottom,
+        #000000 0%,
+        #000000 15%,
+        #00A5B0 15%,
+        #00A5B0 65%,
+        #000000 65%,
+        #000000 100%
+    )
+}
