--- a/client/src/Component/Card/projectcard.css
+++ b/client/src/Component/Card/projectcard.css
@@ -32,3 +32,14 @@ li{
         #000000 100%
     )
 }
+.bgAbout1{
+    background:linear-gradient(
+        to bottom,
+        #000000 0px,
+        #000000 45px,
+        #00A5B0 45px,
+        #00A5B0 125px,
+        #000000 125px,
+        #000000 400px,
+    )
+}
